--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             "level1/redtshirt.png"
         ],
         2: [
-            "level2/broken_guitar.png",  # Renamed to remove space
+            "level2/broken guitar.png",  # Renamed to remove space
             "level2/brokenbtl.png",
             "level2/greentshirt.png",
             "level2/sticker.png",
