--- a/index.html
+++ b/index.html
@@ -220,9 +220,12 @@
         w = img.naturalWidth
         h = img.naturalHeight
         if w == 0 or h == 0:
+            print("Image not loaded yet. Using fallback dimensions.")
             return (max_dim, max_dim)  # fallback if not loaded
         ratio = min(max_dim / w, max_dim / h)
-        return (w * ratio, h * ratio)
+        scaled_w, scaled_h = w * ratio, h * ratio
+        print(f"Scaled dimensions: {scaled_w}x{scaled_h} for image with original size {w}x{h}")
+        return (scaled_w, scaled_h)
 
     # -------------------------------------------------
     # LOADING SCREEN UTILS (OPTIONAL)
@@ -234,6 +237,7 @@
         loading_progress.style.width = f"{progress}%"
         print(f"Asset loaded: {event}. Progress: {progress}%")
         if assets_loaded == total_assets:
+            print("All assets loaded.")
             show_title_screen()
 
     def show_title_screen():
@@ -646,17 +650,20 @@
             bullet[1] -= BULLET_SPEED
             if bullet[1] < 0:
                 bullets.remove(bullet)
+                print(f"Bullet removed for going off-screen: {bullet}")
 
         # Move enemy bullets
         for bullet in enemy_bullets[:]:
             bullet[1] += ENEMY_BULLET_SPEED
             if bullet[1] > HEIGHT:
                 enemy_bullets.remove(bullet)
+                print(f"Enemy bullet removed for going off-screen: {bullet}")
 
         # Laser beams expire
         for laser in laser_beams[:]:
             if window.Date.new().getTime() - laser["timestamp"] > LASER_DURATION:
                 laser_beams.remove(laser)
+                print(f"Laser beam removed after duration: {laser}")
 
         # Diagonal shots
         for shot in diagonal_shots[:]:
@@ -664,16 +671,15 @@
             shot["y"] += shot["dy"]
             if shot["y"] > HEIGHT or shot["x"] < 0 or shot["x"] > WIDTH:
                 diagonal_shots.remove(shot)
+                print(f"Diagonal shot removed for going off-screen: {shot}")
 
         # Collisions with normal enemies
         if level <= MAX_LEVELS:
             for enemy in enemies[:]:
                 for bullet in bullets[:]:
-                    if (bullet[0] >= enemy["pos"][0] and
-                        bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
-                        bullet[1] >= enemy["pos"][1] and
-                        bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
-                        print(f"Enemy hit at position {enemy['pos']}")
+                    if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
+                        enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
+                        print(f"Enemy hit at position {enemy['pos']} by bullet {bullet}")
                         enemies.remove(enemy)
                         bullets.remove(bullet)
                         score += 1
@@ -682,37 +688,33 @@
         else:
             # Collisions with boss
             for bullet in bullets[:]:
-                if (bullet[0] >= boss_pos[0] and
-                    bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    bullet[1] >= boss_pos[1] and
-                    bullet[1] <= boss_pos[1] + BOSS_SIZE):
-                    print(f"Boss hit at position {boss_pos}")
+                if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
+                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
+                    print(f"Boss hit at position {boss_pos} by bullet {bullet}")
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
 
         # Collisions with player
         for bullet in enemy_bullets[:]:
-            if (bullet[0] >= player_pos[0] and
-                bullet[0] <= player_pos[0] + PLAYER_SIZE and
-                bullet[1] >= player_pos[1] and
-                bullet[1] <= player_pos[1] + PLAYER_SIZE):
-                print("Player hit by enemy bullet")
+            if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_SIZE and
+                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_SIZE):
+                print(f"Player hit by enemy bullet at position {bullet}")
                 game_over = True
 
         for laser in laser_beams[:]:
-            if (laser["x"] <= player_pos[0] + PLAYER_SIZE and
-                laser["x"] + LASER_WIDTH >= player_pos[0] and
-                laser["y"] >= player_pos[1]):
-                print("Player hit by laser beam")
+            if (player_pos[0] <= laser["x"] + LASER_WIDTH and
+                laser["x"] <= player_pos[0] + PLAYER_SIZE and
+                player_pos[1] <= laser["y"]):
+                print(f"Player hit by laser beam at position {laser}")
                 game_over = True
 
         for shot in diagonal_shots[:]:
-            if (shot["x"] <= player_pos[0] + PLAYER_SIZE and
-                shot["x"] + BULLET_WIDTH >= player_pos[0] and
-                shot["y"] <= player_pos[1] + BULLET_HEIGHT and
-                shot["y"] + BULLET_HEIGHT >= player_pos[1]):
-                print("Player hit by diagonal shot")
+            if (player_pos[0] <= shot["x"] + BULLET_WIDTH and
+                shot["x"] <= player_pos[0] + PLAYER_SIZE and
+                player_pos[1] <= shot["y"] + BULLET_HEIGHT and
+                shot["y"] <= player_pos[1] + BULLET_HEIGHT):
+                print(f"Player hit by diagonal shot at position {shot}")
                 game_over = True
 
         # Enemy/player overlap (normal levels)
@@ -736,6 +738,7 @@
                     enemy["pos"][1] += ENEMY_SIZE
                 ENEMY_SPEED = -ENEMY_SPEED
                 print("Enemies moved down and reversed direction")
+
         else:
             # Boss movement
             boss_pos[0] += boss_direction * 10
@@ -744,12 +747,10 @@
                 print(f"Boss changed direction to {boss_direction}")
             boss_pos[1] += window.Math.random() * 10 - 5
             boss_pos[1] = max(0, min(HEIGHT // 4, boss_pos[1]))
+            print(f"Boss position updated to {boss_pos}")
 
         draw()
 
-    # -------------
-    # ENEMY SHOOTING
-    # -------------
     def enemy_shoot():
         global game_over, game_started, showing_level_title
         global boss_last_laser, boss_last_diagonal_shot
@@ -766,7 +767,7 @@
                         bullet_x,
                         bullet_y
                     ])
-                    print(f"Enemy at {enemy['pos']} fired a bullet")
+                    print(f"Enemy at {enemy['pos']} fired a bullet at ({bullet_x}, {bullet_y})")
         else:
             if window.Math.random() < 0.1:
                 bullet_x = boss_pos[0] + BOSS_SIZE // 2
@@ -775,7 +776,7 @@
                     bullet_x,
                     bullet_y
                 ])
-                print(f"Boss at {boss_pos} fired a bullet")
+                print(f"Boss at {boss_pos} fired a bullet at ({bullet_x}, {bullet_y})")
             current_time = window.Date.new().getTime()
             if current_time - boss_last_laser > boss_laser_cooldown:
                 laser_beams.append({
@@ -918,4 +919,5 @@
   </script>
 </body>
 </html>
+
 
